--- a/sis/templates/contacts/_contact_info_js.html
+++ b/sis/templates/contacts/_contact_info_js.html
@@ -2,9 +2,19 @@
 {% load staticfiles %}
 {% load i18n %}
 
+{% if entity_type == 'client' %}
+   $(".phone_row").formset({
+            prefix: '{{ phones_form_prefix }}',
+            addText: '<i class="fa fa-plus-circle"></i> {% trans "Add phone" %}',
+            deleteText: '<i class="fa fa-remove"> {% trans "Remove phone" %}'
+        });
+{% else %}
+
    $("#{{entity_type}}-form-phones .phone_row").formset({
             prefix: '{{ phones_form_prefix }}',
             addText: '<i class="fa fa-plus-circle"></i> {% trans "Add phone" %}',
             deleteText: '<i class="fa fa-remove"> {% trans "Remove phone" %}'
         });
+        
+{% endif %}
         
