--- a/sis/templates/clients/base_profile.html
+++ b/sis/templates/clients/base_profile.html
@@ -75,18 +75,16 @@
 				<li class="tab-pane {% if tab == 'ref' %} active {% endif %}">
 					<a href="{% url 'client_profile_referral' pk=object.id %}" >{% trans 'Referral' %}</a>
 				</li>
-				<li class="tab-pane">
+				<li class="tab-pane {% if tab == 'rel' %} active {% endif %}">
                     <a href="{% url 'client_profile_relationship' pk=object.id %}" >{% trans 'Contacts' %}</a>
                 </li>
                 <li class="tab-pane {% if tab == 'order' %} active {% endif %}">
                     <a href="{% url 'client_profile_order' pk=object.id %}" >{% trans 'Meal Default' %}</a>
                 </li>
+                <li class="tab-pane {% if tab == 'diet' %} active {% endif %}">
+                    <a href="{% url 'client_profile_diet' pk=object.id %}" >{% trans 'Restrictions' %}</a>
+                </li>
 				{% comment %}
-				
-				
-				<li class="tab-pane">
-					<a href="{% url 'client_profile' tab='meal' pk=object.id %}" >{% trans 'Meal' %}</a>
-				</li>
 				
 				<li class="tab-pane">
 					<a href="{% url 'client_profile' tab='deliv' pk=object.id %}" >{% trans 'Deliveries' %}</a>
